# rust-samples

./: Cargo.toml
benches/: filtermap.rs
examples/: samemethod.rs  wrapped.rs
src/: lib.rs  main.rs
src/improveurrust/: mod.rs  samemethod.rs  tryinsta.rs
src/rustberlin/: feb.rs  mod.rs
src/waitwhat/: filtermap.rs  just.rs  mod.rs  typealiases.rs  wrapper.rs
