[package]
name = "rust-samples"
version = "0.1.0"
edition = "2024"

[lints.rust]
dead_code = "allow"

[lints.clippy]
same_name_method = "warn"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
insta = { version = "1.46.3", features = ["json", "yaml"] }

[[bench]]
name = "filtermap"
harness = false
